* Makefile.in (update-sources): New target. 	For use by gcc_release script.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47625 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -2435,6 +2435,9 @@ nmake.ads :  sinfo.ads nmake.adt xnmake.adb
 	$(CP) $^ bldtools
 	(cd bldtools; gnatmake -q xnmake ; ./xnmake -s ../nmake.ads )
 
+update-sources : treeprs.ads einfo.h sinfo.h nmake.adb nmake.ads
+	$(CP) $^ $(srcdir)
+
 ADA_INCLUDE_DIR = $(libsubdir)/adainclude
 ADA_RTL_OBJ_DIR = $(libsubdir)/adalib
 
