2001-12-04  Phil Edwards  <pme@gcc.gnu.org>
	* Makefile.in:  Add INSTALL_SCRIPT using INSTALL definition.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47633 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -121,6 +121,7 @@ LN_S=@LN_S@
 # These permit overriding just for certain files.
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_DATA = @INSTALL_DATA@
+INSTALL_SCRIPT = @INSTALL@
 MAKEINFO = @MAKEINFO@
 MAKEINFOFLAGS =
 TEXI2DVI = texi2dvi
