* Makefile.in: (HIE_SOURCES): add s-fat*.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47647 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -1896,6 +1896,12 @@ HIE_SOURCES = \
  unchdeal.ads \
  s-maccod.ads \
  s-unstyp.ads \
+ s-fatgen.ads \
+ s-fatgen.adb \
+ s-fatflt.ads \
+ s-fatlfl.ads \
+ s-fatllf.ads \
+ s-fatsfl.ads \
  a-tags.ads   \
  a-tags.adb $(EXTRA_HIE_SOURCES)
 
