* sem_ch12.adb (Instantiate_Package_Body): if instance is a compilation 	 unit, always replace instance node with new body, for ASIS use.
	* prj-nmsc.adb (Language_Independent_Check): Issue a warning if
	libraries are not supported and both attributes Library_Name and
	Library_Dir are specified.

	* prj-proc.adb (Expression): Set location of Result to location of
	first term.

	* Makefile.in: Add mlib.o, mlib-fil.o, mlib-tgt and mlib-utl to GNATLS.
	(prj-nmsc is now importing MLib.Tgt)

	* prj-proc.adb: Put the change indicated above that was forgotten.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47690 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/Makefile.in
+++ b/gcc/ada/Makefile.in
@@ -489,6 +489,10 @@ GNATLS_OBJS = \
  hostparm.o \
  krunch.o   \
  lib.o      \
+ mlib.o     \
+ mlib-fil.o \
+ mlib-tgt.o \
+ mlib-utl.o \
  namet.o    \
  nlists.o   \
  opt.o      \
