* Makefile.in (STMP_FIXPROTO, STMP_FIXINC): Use substituted values 	from autoconf.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47695 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -240,8 +240,8 @@ CROSS_SYSTEM_HEADER_DIR = $(build_tooldir)/sys-include
 SYSTEM_HEADER_DIR = @SYSTEM_HEADER_DIR@
 
 # Control whether to run fixproto and fixincludes.
-STMP_FIXPROTO = stmp-fixproto
-STMP_FIXINC = stmp-fixinc
+STMP_FIXPROTO = @STMP_FIXPROTO@
+STMP_FIXINC = @STMP_FIXINC@
 
 # Test to see whether <limits.h> exists in the system header files.
 LIMITS_H_TEST = [ -f $(SYSTEM_HEADER_DIR)/limits.h ]
