--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,8 @@
+Thu Dec  6 12:13:24 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (flow_find_cross_jump): Replace tests for note
+	by active_insn_p; count conditional jump as instruction.
+
 Fri Nov 30 21:42:06 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* Merger from mainline (cfg-merger-20011130 tag).
