* Makefile.in: Rebuilt. 	* Makefile.am (java/lang/reflect/Method.h): ObjectInputStream now 	a friend. 	* java/lang/natClass.cc (getSignature): Only look at elements of 	non-null parameters. 	(getPrivateMethod): Removed old FIXME comment. 	* java/io/natObjectInputStream.cc (allocateObject): Removed old 	FIXME comment. 	(callConstructor): Simply use `NULL' for value of parameters. 	(ObjectClass): Removed. 	(ClassClass): Likewise. 	* java/io/ObjectInputStream.java (readObject): Fixed typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47800 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -313,6 +313,7 @@ java/lang/reflect/Method.h: java/lang/reflect/Method.class
 	$(GCJH) -classpath $(top_builddir) \
 	    -friend 'jmethodID _Jv_FromReflectedMethod (java::lang::reflect::Method *);' \
 	    -friend 'class java::lang::Class;' \
+	    -friend 'class java::io::ObjectInputStream;' \
 	    -friend 'jobject _Jv_JNI_ToReflectedMethod (_Jv_JNIEnv *, jclass, jmethodID, jboolean);' \
 	    $(basename $<)
 
