* Makefile.in: Rebuilt. 	* Makefile.am (gnu/gcj/runtime/VMClassLoader.h): Use `::java'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47824 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -3024,7 +3024,7 @@ java/lang/reflect/Method.h: java/lang/reflect/Method.class
 
 gnu/gcj/runtime/VMClassLoader.h: gnu/gcj/runtime/VMClassLoader.class
 	$(GCJH) -classpath $(top_builddir) \
-	    -friend 'class java::lang::ClassLoader;' \
+	    -friend 'class ::java::lang::ClassLoader;' \
 	    $(basename $<)
 
 java/io/ObjectInputStream$$GetField.h: java/io/ObjectInputStream.class
