* Makefile.in (.po.gmo): Use POSIXLY_CORRECT argument ordering.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47838 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -3319,7 +3319,7 @@ update-po: $(CATALOGS:.gmo=.pox)
 # script does that.
 .po.gmo:
 	-test -d po || mkdir po
-	$(GMSGFMT) --statistics $< -o $@
+	$(GMSGFMT) --statistics -o $@ $<
 
 # The new .po has to be gone over by hand, so we deposit it into
 # build/po with a different extension.
